make working protoype

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
-    background-color: rgb(26, 25, 10);
-    color: aqua;
+    background-color: rgba(25, 179, 190, 0.384);
+    color: rgba(0, 16, 16, 0.958);
     align-items: center;
 
 }
